--- a/index.html
+++ b/index.html
@@ -23,9 +23,13 @@
 
 
     <main class="turtle">  
-        <div class="turtle__head"></div>
-        <div class="turtle__legs-left"></div>
-        <div class="turtle__legs-right"></div>
+        <div class="turtle__head">
+            <div class="turtle__spot"></div>
+        </div>
+        <div class="turtle__legs slant1" id="top-l"></div>
+        <div class="turtle__legs slant2" id="bot-l"></div>
+        <div class="turtle__legs slant2" id="top-r"></div>
+        <div class="turtle__legs slant1" id="bot-r"></div>
         <div class="turtle__tail"></div>
         
         <section class="turtle__shell">
