turtle and ripples refined

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 
 <body>
 
-
     <main class="turtle">  
         <div class="turtle__head">
             <div class="turtle__spot"></div>
@@ -36,11 +35,12 @@
         </section>
       </main>
 
-    <!-- <canvas id="canvas"></canvas>
-    <div id="wrapper">
-    </div>
+          <!-- <div id="wrapper"></div>
+    </div> -->
+      <canvas id="canvas">
+    </canvas>
 
-    <span id="circle" class="circle"></span> -->
+    <!-- <span id="circle" class="circle"></span> -->
 
     <!-- Load React. -->
     <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
