fixed canvas issues

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
 <body>
 
-    <main class="turtle">  
+    <main class="turtle"> 
+        <div class="turtle__shadow"></div> 
         <div class="turtle__head">
             <div class="turtle__spot"></div>
         </div>
