--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <body>
 
     <main class="turtle" id="turtle"> 
+        <span class="ripple">    </span>
         <div class="turtle__shadow"></div> 
         <div class="turtle__head">
             <div class="turtle__spot"></div>
