--- a/index.html
+++ b/index.html
@@ -21,25 +21,30 @@
 
 <body>
 
-    <main class="turtle" id="turtle"> 
-        <span class="ripple">    </span>
-        <div class="turtle__shadow"></div> 
-        <div class="turtle__head">
-            <div class="turtle__spot"></div>
+    <main class="turtle" id="turtle">
+        <!-- <span class="ripple">    </span> -->
+        <div class="ripples">
+            <div class="rim1"></div>
+            <div class="rim2"></div>
+            <div class="rim3"></div>
         </div>
-        <div class="turtle__legs slant1" id="top-l"></div>
-        <div class="turtle__legs slant2" id="bot-l"></div>
-        <div class="turtle__legs slant2" id="top-r"></div>
-        <div class="turtle__legs slant1" id="bot-r"></div>
-        <div class="turtle__tail"></div>
-        
-        <section class="turtle__shell">
-        </section>
-      </main>
+        <div class="turtle__shadow"></div>
+        <div class="turtle__body" id="turtle__body">
+            <div class="turtle__head">
+                <div class="turtle__spot"></div>
+            </div>
+            <div class="turtle__legs slant1" id="top-l"></div>
+            <div class="turtle__legs slant2" id="bot-l"></div>
+            <div class="turtle__legs slant2" id="top-r"></div>
+            <div class="turtle__legs slant1" id="bot-r"></div>
+            <div class="turtle__tail"></div>
+            <section class="turtle__shell"></section>
+        </div>
+    </main>
 
-          <!-- <div id="wrapper"></div>
+    <!-- <div id="wrapper"></div>
     </div> -->
-      <canvas id="canvas">
+    <canvas id="canvas">
     </canvas>
 
 
