--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-<!-- credit: code modified from base code 
-    circle: https://codepen.io/quentindigital/pen/BapazMy 
-    water: https://codepen.io/thebarghest/pen/XQQzZm -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -33,10 +30,10 @@
             <div class="turtle__head">
                 <div class="turtle__spot"></div>
             </div>
-            <div class="turtle__legs slant1" id="top-l"></div>
-            <div class="turtle__legs slant2" id="bot-l"></div>
-            <div class="turtle__legs slant2" id="top-r"></div>
-            <div class="turtle__legs slant1" id="bot-r"></div>
+            <div class="turtle__leg" id="top-l"></div>
+            <div class="turtle__leg" id="bot-l"></div>
+            <div class="turtle__leg" id="top-r"></div>
+            <div class="turtle__leg" id="bot-r"></div>
             <div class="turtle__tail"></div>
             <section class="turtle__shell"></section>
         </div>
