legs fixed. turtle still not moving

--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
             <div class="turtle__head">
                 <div class="turtle__spot"></div>
             </div>
-            <div class="turtle__leg" id="top-l"></div>
-            <div class="turtle__leg" id="bot-l"></div>
-            <div class="turtle__leg" id="top-r"></div>
-            <div class="turtle__leg" id="bot-r"></div>
+            <section class="turtle__legs">
+            <div id="top-l"></div>
+            <div id="bot-l"></div>
+            <div id="top-r"></div>
+            <div id="bot-r"></div>
+        </section>
             <div class="turtle__tail"></div>
             <section class="turtle__shell"></section>
         </div>
