new cute green turtle

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
             <div id="bot-r"></div>
         </section>
             <div class="turtle__tail"></div>
-            <section class="turtle__shell"></section>
+            <section class="turtle__shell">
+            </section>
         </div>
     </main>
 
@@ -54,7 +55,7 @@
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
 
     <!-- Load React components -->
-    <script src="turtle.js"></script>
+    <script src="turtle.js" types="text/javascript"></script>
     <script src="water.js"></script>
 </body>
 
