fixed legs and now rotates

--- a/index.html
+++ b/index.html
@@ -19,24 +19,26 @@
 <body>
 
     <main class="turtle" id="turtle">
-        <div class="turtle__body" id="pointer">
+        <div class="turtle__body" id="rotate">
+            <!-- ripples under turtle -->
             <div class="ripples">
                 <div class="rim1"></div>
                 <div class="rim2"></div>
                 <div class="rim3"></div>
             </div>
+            <!-- head -->
             <div class="turtle__head">
                 <div class="turtle__spot"></div>
             </div>
-            <section class="turtle__legs">
-                <div id="top-l"></div>
-                <div id="bot-l"></div>
-                <div id="top-r"></div>
-                <div id="bot-r"></div>
-            </section>
+            <!-- legs -->
+            <div id="top-l"></div>
+            <div id="bot-l"></div>
+            <div id="top-r"></div>
+            <div id="bot-r"></div>
+            <!-- tail -->
             <div class="turtle__tail"></div>
-            <section class="turtle__shell">
-            </section>
+            <!-- shell -->
+            <section class="turtle__shell"></section>
         </div>
     </main>
 
